# MCP-Demo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: __init__.py  mcp_server.py
tests/: test_mcp_server.py
