[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo_mcp_list_files"
version = "0.1.0"
description = "Simple demo of a MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp[cli]>=1.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
